tests/baselines/reference/parserParameterList13.errors.txt
==== tests/cases/compiler/parserParameterList13.ts (1 errors) ====
    interface I {
        new (public x);
             ~~~~~~
!!! parserParameterList13.ts(2,10): error TS2246: A parameter property is only allowed in a constructor implementation.
    }